# ifc-lite

./: Cargo.toml  package.json
.changeset/: fix-camera-pan-direction.md  fix-large-model-load.md  major-plums-drop.md  ninety-drinks-belong.md  sharp-beds-visit.md  simplify-orbit-behavior.md  tame-clouds-watch.md  ten-buses-share.md
apps/desktop/: CHANGELOG.md  package.json
apps/server/src/services/: data_model.rs
apps/viewer/: CHANGELOG.md  package.json  vite.config.ts
apps/viewer-embed/: CHANGELOG.md  package.json
apps/viewer/src/: vite-env.d.ts
apps/viewer/src/components/viewer/: KeyboardShortcutsDialog.tsx  PropertiesPanel.tsx  Viewport.tsx  useMouseControls.ts  useTouchControls.ts
apps/viewer/src/components/viewer/hierarchy/: treeDataBuilder.test.ts  treeDataBuilder.ts  types.ts
apps/viewer/src/components/viewer/lists/: ListPanel.tsx  ListResultsTable.tsx
apps/viewer/src/hooks/: useIfcCache.ts
apps/viewer/src/sdk/adapters/: visibility-adapter.ts
apps/viewer/src/store/: basketVisibleSet.test.ts  basketVisibleSet.ts
apps/viewer/src/store/slices/: pinboardSlice.ts
apps/viewer/src/utils/: serverDataModel.test.ts  serverDataModel.ts  spatialHierarchy.test.ts  spatialHierarchy.ts
demo/: viewer-demo.sh
examples/babylonjs-viewer/src/: main.ts
examples/threejs-viewer/: compare.html  vite.config.ts
examples/threejs-viewer/src/: compare.ts  main.ts
rust/geometry/src/: profiles.rs
